# RestaurantAPI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 01a30b0dcf8f_edited_user.py  3422e138ff74_init_tables.py  8e263ee94850_init_tables.py  bf6262e21d78_date_time_fix.py  c4a27220be13_user_id_and_table_id_now_unique.py  d0bdbfd3f66d_create_tables.py  fd7077ce4dd3_make_login_uniqie.py
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/handlers/: __init__.py  auth.py  booking.py  table.py  user.py
app/core/: __init__.py  enum.py  exception.py  logging.py  settings.py  utils.py
app/database/: __init__.py  session.py
app/models/: __init__.py  booking.py  table.py  user.py
app/models.py/: table.py  user.py
app/repositories/: __init__.py  base_repository.py  booking_repository.py  table_repository.py  user_repository.py
app/schemas/: __init__.py  booking.py  table.py  token.py  user.py
app/services/: __init__.py  auth_service.py  booking_service.py  cache_service.py  table_service.py  user_service.py
cache/: accessor.py
tests/: test_auth.py
